--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
     "bootstrap": "^4.4.1",
+    "cropperjs": "^1.5.6",
     "jquery": "^3.4.1",
+    "jquery-cropper": "^1.0.1",
     "suggestions": "^1.7.0"
   }
 }
