Added Fixtures, Updated requirements, added compatibility for any machine that works with CircuitPython, and runs as a simulation otherwise.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ requests>=2.22.0
 Django>=3.0.2
 sphinx>=2.2.1
 django-npm>=1.0.0
+pigpio>=1.45
+adafruit-blinka>=3.9.0
+adafruit-circuitpython-mcp230xx>=2.2.2
