--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,68 @@
-python-socketio
-aiohttp
-hx711
+aiofiles==0.7.0
+aiohttp==3.7.4.post0
+ajsonrpc==1.2.0
+alembic==1.7.4
+aniso8601==9.0.1
+anyio==3.3.2
+asgiref==3.4.1
+async-timeout==3.0.1
+attrs==21.2.0
+bidict==0.21.3
+bottle==0.12.19
+certifi==2021.5.30
+chardet==4.0.0
+charset-normalizer==2.0.6
+click==8.0.1
+colorama==0.4.4
+dnspython==2.1.0
+email-validator==1.1.3
+Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-Migrate==3.1.0
+flask-mongoengine==1.0.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.2
+h11==0.12.0
+hx711==1.1.2.3
+idna==3.2
+ifaddr==0.1.7
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+Mako==1.1.5
+MarkupSafe==2.0.1
+marshmallow==3.13.0
+mongoengine==0.23.1
+multidict==5.2.0
+packaging==21.0
+platformio==5.2.0
+pluggy==1.0.0
+py==1.10.0
+pyelftools==0.27
 pymongo==3.5.1
-flask
-flask-sqlalchemy
-flask-migrate
-flask-cors
-flask-restful
-websocket-client
-pyserial
-rpi-backlight
-platformio
-
-# Testing only
-pytest
+pyparsing==2.4.7
+pyserial==3.5
+pytest==6.2.5
+python-engineio==4.2.1
+python-socketio==5.4.0
+pytz==2021.3
+requests==2.26.0
+rpi-backlight==2.4.1
+semantic-version==2.8.5
+six==1.16.0
+sniffio==1.2.0
+SQLAlchemy==1.4.25
+starlette==0.16.0
+tabulate==0.8.9
+toml==0.10.2
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+uvicorn==0.15.0
+websocket-client==1.2.1
+Werkzeug==2.0.2
+wsproto==1.0.0
+WTForms==2.3.3
+yarl==1.6.3
+zeroconf==0.36.7
