--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ python-socketio==5.4.0
 pytz==2021.3
 requests==2.26.0
 rpi-backlight==2.4.1
+sdnotify==0.3.2
 semantic-version==2.8.5
 six==1.16.0
 sniffio==1.2.0
