--- a/systemd/central.template
+++ b/systemd/central.template
@@ -3,7 +3,9 @@ Description=Bartender Central Socket.io Server
 
 [Service]
 Type=notify
-ExecStart=/usr/bin/python3 [BARTENDERDIR]/backend/central_server/central_server.py
+Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
+Environment=PATH=<BARTENDER_DIR>/venv/bin:$PATH
+ExecStart=/usr/bin/python3 <BARTENDER_DIR>/backend/central_server/central_server.py
 User=pi
 
 [Install]
