--- a/systemd/valve.template
+++ b/systemd/valve.template
@@ -4,7 +4,9 @@ After=central
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 [BARTENDERDIR]/backend/valve_server/valve_server.py
+Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
+Environment=PATH=<BARTENDER_DIR>/venv/bin:$PATH
+ExecStart=/usr/bin/python3 <BARTENDER_DIR>/backend/valve_server/valve_server.py
 User=pi
 
 [Install]
