Updates for deb build

--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,6 @@ Source: bartender
 Maintainer: Desone Burns II <dburnsii@live.com>
 Description: The open-source drink making machine.
 Build-Depends: debhelper
-
 Package: bartender
 Architecture: armhf
+Version: 0.1.0
