--- a/systemd/frontend.template
+++ b/systemd/frontend.template
@@ -4,9 +4,7 @@ After=central
 
 [Service]
 Type=simple
-Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
-Environment=PATH=<BARTENDER_DIR>/venv/bin:$PATH
-WorkingDirectory=<BARTENDER_DIR>/frontend/build
+WorkingDirectory=<BARTENDER_DIR>/frontend
 ExecStart=/usr/bin/python3 -m http.server 3000
 User=pi
 
