Split builds and checkout submodules

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,19 +12,21 @@ on:
     branches: [ main ]
 
 jobs:
-  build-deb:
+  build-deb-armv7:
     runs-on: ubuntu-20.04
-    name: Build on Debian Bullseye
+    name: Build Armv7 on Debian Bullseye
     steps:
       -
         name: Git Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: 'true'
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
           image: tonistiigi/binfmt:latest
-          platforms: linux/arm/v7, linux/arm64
+          platforms: linux/arm/v7
       -
         name: Build .deb Armv7
         run: |
@@ -35,10 +37,21 @@ jobs:
         with:
           name: bartender-armv7.deb
           path: build/*.deb
+  build-deb-arm64:
+    runs-on: ubuntu-20.04
+    name: Build Arm64 on Debian Bullseye
+    steps:
       -
-        name: Cleanup
-        run: |
-          make clean
+        name: Git Checkout
+        uses: actions/checkout@v2
+        with:
+          submodules: 'true'
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: linux/arm64
       -
         name: Build DEB Arm64
         run: |
