Updates to installed deb file, use github cache

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,6 +19,15 @@ jobs:
         with:
           submodules: 'true'
       -
+        name: Setup Cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-armv7
+        with:
+          path: |
+            ~/.cache
+          key: ${{ runner.os }}-${{ env.cache-name}}
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
@@ -43,6 +52,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'true'
+      -
+        name: Setup Cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-arm64
+        with:
+          path: |
+            ~/.cache
+          key: ${{ runner.os }}-${{ env.cache-name}}
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
