--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea
+.cache
 node_modules
 db.sqlite3
 .bartender.db
@@ -13,5 +14,5 @@ fp-info-cache
 *-cache.lib
 venv
 build
-bartender-*
+bartender-*/
 systemd/*.service
