--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 aiofiles==0.7.0
-aiohttp==3.7.4.post0
+aiohttp==3.8.1
+aiosignal==1.2.0
 ajsonrpc==1.2.0
 alembic==1.7.4
 aniso8601==9.0.1
 anyio==3.3.2
 asgiref==3.4.1
-async-timeout==3.0.1
-attrs==21.2.0
+async-timeout==4.0.2
+attrs==21.4.0
 bidict==0.21.3
 bottle==0.12.19
 certifi==2021.5.30
 chardet==4.0.0
-charset-normalizer==2.0.6
+charset-normalizer==2.0.12
 click==8.0.1
 colorama==0.4.4
 dnspython==2.1.0
@@ -23,10 +24,11 @@ flask-mongoengine==1.0.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+frozenlist==1.3.0
 greenlet==1.1.2
 h11==0.12.0
 hx711==1.1.2.3
-idna==3.2
+idna==3.3
 ifaddr==0.1.7
 iniconfig==1.1.1
 itsdangerous==2.0.1
@@ -65,5 +67,5 @@ websocket-client==1.2.1
 Werkzeug==2.0.2
 wsproto==1.0.0
 WTForms==2.3.3
-yarl==1.6.3
+yarl==1.7.2
 zeroconf==0.36.7
