--- a/systemd/frontend.template
+++ b/systemd/frontend.template
@@ -1,6 +1,7 @@
 [Unit]
 Description=Bartender Frontend Server
-After=central
+Requires=central.service
+After=central.service
 
 [Service]
 Type=simple
