--- a/systemd/system.template
+++ b/systemd/system.template
@@ -1,6 +1,7 @@
 [Unit]
 Description=Bartender System Server
-After=central
+Requires=central.service
+After=central.service
 
 [Service]
 Type=simple
