Sign built DEB package

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -36,7 +36,7 @@ jobs:
       -
         name: Build .deb Armv7
         run: |
-          docker run --platform linux/arm/v7 --volume $(pwd):/home/bartender dburnsii/bartender-build:latest
+          docker run --platform linux/arm/v7 --volume $(pwd):/home/bartender -e GPG_SIGNING_KEY=${{secrets.GPG_SIGNING_KEY}} dburnsii/bartender-build:latest
       -
         name: Upload Armv7 .deb
         uses: actions/upload-artifact@v2
@@ -70,7 +70,7 @@ jobs:
       -
         name: Build DEB Arm64
         run: |
-          docker run --platform linux/arm64 --volume $(pwd):/home/bartender dburnsii/bartender-build:latest
+          docker run --platform linux/arm64 --volume $(pwd):/home/bartender -e GPG_SIGNING_KEY=${{secrets.GPG_SIGNING_KEY}} dburnsii/bartender-build:latest
       -
         name: Upload Arm64 .deb
         uses: actions/upload-artifact@v2
