Lots of updates to add an upgrade button to the UI

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,9 +2,7 @@ name: Build Debian Packages
 
 on:
   push:
-    branches:
-      - main
-      - 'dburnsii/debian_package'
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
