--- a/debian/control
+++ b/debian/control
@@ -8,4 +8,4 @@ Priority: standard
 Component: main
 Architecture: <ARCH>
 Version: 0.1.2
-Depends: firefox-esr python3 python3-apt
+Depends: firefox-esr, python3, python3-apt
