--- a/debian/control
+++ b/debian/control
@@ -7,5 +7,5 @@ Section: electronics
 Priority: standard
 Component: main
 Architecture: <ARCH>
-Version: 0.1.2
+Version: <VERSION>
 Depends: firefox-esr, python3, python3-apt
