--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
-.idea
-.cache
-.secrets
-node_modules
-db.sqlite3
-.bartender.db
-__pycache__/
-*.py[cod]
-media/images/*
-frontend/.eslintcache
-LCD-show
-hardware/stl
 *-bak
-fp-info-cache
 *-cache.lib
-venv
-build
-bartender-*/
-systemd/*.service
+*.py[cod]
+*.stl
+*.zip
+.bartender.db
+.cache
+.idea
 .npm
+.secrets
+LCD-show
+__pycache__/
+_autosave*
+bartender-*/
+build
+db.sqlite3
+fp-info-cache
+frontend/.eslintcache
+media/images/*
+node_modules
+systemd/*.service
+venv
