--- a/systemd/database.template
+++ b/systemd/database.template
@@ -7,7 +7,7 @@ WorkingDirectory=<BARTENDER_DIR>/backend/database_server
 Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
 Environment=PATH=<BARTENDER_DIR>/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart=<BARTENDER_DIR>/venv/bin/python3 <BARTENDER_DIR>/backend/database_server/app.py
-User=pi
+User=bartender
 
 [Install]
 WantedBy=multi-user.target
