--- a/systemd/central.template
+++ b/systemd/central.template
@@ -6,7 +6,7 @@ Type=notify
 Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
 Environment=PATH=<BARTENDER_DIR>/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart=<BARTENDER_DIR>/venv/bin/python3 <BARTENDER_DIR>/backend/central_server/central_server.py
-User=pi
+User=bartender
 
 [Install]
 WantedBy=multi-user.target
