--- a/systemd/kiosk.template
+++ b/systemd/kiosk.template
@@ -9,8 +9,8 @@ Environment=DISPLAY=:0
 Environment=XAUTHORITY=/home/pi/.Xauthority
 Type=simple
 ExecStart=/usr/bin/firefox --kiosk http://localhost:3000
-User=pi
-Group=pi
+User=bartender
+Group=bartender
 RestartSec=10s
 Restart=always
 
