--- a/systemd/system.template
+++ b/systemd/system.template
@@ -8,7 +8,7 @@ Type=simple
 Environment=VIRTUAL_ENV=<BARTENDER_DIR>/venv
 Environment=PATH=<BARTENDER_DIR>/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 ExecStart=<BARTENDER_DIR>/venv/bin/python3 <BARTENDER_DIR>/backend/system_server/system_server.py
-User=pi
+User=bartender
 
 [Install]
 WantedBy=multi-user.target
