--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - run: make frontend/build
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -50,6 +51,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       - run: make frontend/build
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
